Version 0.3
	* added settings otr_policy and otr_ignore
	* fixed two segfault sources
	* key generation now operates on a temp file
	* commands now take an optional nick@server argument
	  (for single message window users)
	* changed loglevel of otr_log (heartbeats) and otr_finish
	* moved to the new public statusbar-item.h header

Version 0.2

	* fixed multiple server problem.
	* fixed fragmentation problem (seen with pidgin over IRC).