@@ -1,37 +1,50 @@
-Usually, you shouldn't have to do anything besides "/load otr" to have encrypted
-conversations. Just  write something, wait  about 10  seconds and you  should go
-secure. Not the first time though, see  the next paragraph about keys. Also some
-uncommon IRC  servers strip off the  whitespace OTR uses as  announcement, there
-you or your buddy will have to type "?OTR?" to get going.
+Quick start: Do "/load otr", write "?OTR?" to your OTR buddy, wait until the now
+ongoing key generation finishs and write "?OTR?" again. You should "go secure".
 
-Initially  a  private key  will  have  to be  generated.  OTR  will trigger  key
-generation itself once  you talk to someone  with OTR. You can  however start it
-yourself with "/otr genkey nick@irc.server.com". That can take two minutes or on
-some systems even an hour. To speed up the process you can generate some entropy
-by running something like "du /" in parallel.
+Key generation happens in a seperate  process and its duration mainly depends on
+the available entropy. On  my desktop it takes about 6  Minutes, about 2 Minutes
+if I run  "du /" in parallel  and on an idle  server system it can  even take an
+hour.
+
+The  default  OTR policy  of  irssi-otr  is  now  something between  manual  and
+opportunistic. Manual means  you have to start it yourself  by issueing "?OTR?",
+opportunistic means  both peers send  some magic  whitespace and start  OTR once
+they  receive this  whitespace from  the other  side. irssi-otr  uses a  mode in
+between  where  we  are  not  sending  whitespace  as  an  announcement  (as  in
+opportunistic) but we still  handle whitespace if we see it  from the other side
+(I'm  calling  it handlews).  Therefore  if  your  peer uses  opportunistic  the
+handshake should still start automatically once he writes something.
+
+You can  now set the  OTR policy  per peer via  the otr_policy /setting.  It's a
+comma seperated  list of "<nick>@<server> <policy>"  pairs where <nick>@<server>
+is interpreted as a glob pattern, i.e. you can use wildcard "*" and joker "?" as
+you would  in a shell.  The policy  can be one  of never, manual,  handlews (the
+default),  opportunistic, and  always. Be  aware that  the opportunistic  policy
+fails with  some IRC  servers since  they strip off  the whitespace.  The always
+policy has  the nice side effect  that the first  line you type will  already be
+encrypted.
+
+If  a  fingerprint can  be  found  for someone,  i.e.  someone  you had  an  OTR
+conversation  with  before,  then  the otr_policy_known  setting  applies  after
+otr_policy. It has the same syntax. The  default is "* always", i.e. enforce OTR
+with  anyone you've  used  OTR with  before.
+
+Should you finish an OTR session via "/otr finish" and should the active policy
+be always or opportunistic then it will be temporarily set back to handlews.
+Otherwise OTR would start again right away which is probably not what you want.
+This is however reset once you close the query window.
 
 To make  sure that you are  actually talking to your  buddy, you can agree  on a
 secret somehow  and then one does  "/otr auth <secret>". Shortly  afterwards the
-other one will be asked to do  the same and you're done.
+other  one will  be  asked to  do  the  same and  you're  done. The  traditional
+alternative, comparing  fingerprints over a secure  line, can also be  used. Use
+"/otr trust" once you're sure they match.
 
 I also strongly  recommend to do "/statusbar window add  otr" so you're informed
-about  what's going  on.
+about what's going on.
 
 In  "~/.irssi/otr/otr.{key,fp}" you'll  find the  fingerprints and  your private
 keys(should you at any point be interested).
-
-The standard  OTR policy  is opportunistic, meaning  we'll send  some whitespace
-after messages and we'll also look for it from our peer. Should we see the magic
-whitespace from  our peer  we'll start a  handshake. If at  any point  you enter
-"/otr finish" then the  policy is changed so as not  to send whitespace anymore.
-Therefore, if your peer  has the same behaviour, OTR will  not start again. This
-is however  reset once you  close the  query window. When  you open a  new query
-window OTR  will start sending whitespace  again which might cause  your peer to
-start an OTR session.
-
-Don't expect any of  this to work if you are using a  single messages window and
-not a  query window per  buddy (as in "/SET  use_msgs_window ON"). I  just heard
-about that, certainly needs some work to support that mode.
 
 Commands:
 
